# GNUradio_Python_Jupyter_Docker

./: .docker-compose.yml.kate-swp  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_TEMPLATES.md  README_TEMPLATES2.md  diagnose_issues.sh  docker-compose.yml  gnuradio-lab.sh  gnuradio_base_template.json  gnuradio_jupyter_docker_manager.sh  jupyter_notebook_config.py  pyproject.toml  requirements.txt  verify_build.py  verify_setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build-test.yml
OLD/: Dev_Issues.md  Dockerfile  GNU Radio Docker Jupyter Lab Setup  README_usage.md  debug-directories.sh  gitignore-file.txt  pyproject.toml
data/: .gitkeep
docker/: Dockerfile  docker-compose.yml  docker_build_verification_tests.py  jupyter_template_system_config.py
docker/templates/: gnuradio_notebook_starter_template.json
flowgraphs/: .gitkeep
notebooks/: .gitkeep  Untitled.ipynb  Untitled1.ipynb  gnu_radio_python_check.ipynb  pip_install_test_notebook.ipynb
scripts/: .gitkeep
